tests/test15.output
/home/vladyslav/CLionProjects/mcc/tests/test15.c:6:29[0;31m error [0m
Variable 'd' has not been declared, near 'd', line 6

Encountered 1 semantic errors. Stopping compilation.
