tests/test15.c
#include <stdio.h>

int main() {
	int x = 0, y = 1, z = 2;

	printf("%d\n", x + y + z + d);
}